--- a/stylesheet.css
+++ b/stylesheet.css
@@ -99,6 +99,9 @@ header {
 .logo h1 {
   font-size: 32px;
   padding-left: 10px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 
